# lab3

./: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.txt
