cmake_minimum_required( VERSION 3.0 )

project(task1)
add_executable(task1 task1.cpp)

project(task2)
add_executable(task2 task2.cpp)

project(task3)
add_executable(task3 task3.cpp)

project(task4)
add_executable(task4 task4.cpp)

project(task5)
add_executable(task5 task5.cpp)

project(task6)
add_executable(task6 task6.cpp)
